--- a/styles/style.css
+++ b/styles/style.css
@@ -5,51 +5,58 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: whitesmoke;
+    margin: 0;
 }
 
 /* main section */
 /* Title section  */
-.menu{
+.menu {
     display: flex;
     justify-content: space-between;
     padding: 0 125px;
     margin-top: 90px;
 }
-h3.web-title{
+
+h3.web-title {
     font-size: 25px;
 }
-.nav-menu{
+
+.nav-menu {
     display: flex;
     list-style-type: none;
     gap: 25px;
 }
-.nav-menu li a{
-   text-decoration: none; 
-   color: #111111;
-    
+
+.nav-menu li a {
+    text-decoration: none;
+    color: #111111;
+
 }
 
 /* banner section  */
-.banner{
+.banner {
     display: flex;
     padding: 0 125px;
     gap: 0 70px;
     margin-top: 25px;
     margin-bottom: 125px;
 }
-.banner-title{
+
+.banner-title {
     font-size: 54px;
 }
-.banner-button{
+
+.banner-button {
     border: none;
     font-size: 18px;
     font-weight: 600;
-    background-color:deeppink ;
+    background-color: deeppink;
     color: white;
     padding: 10px 25px;
     border-radius: 20px;
 }
-.banner-img{
+
+.banner-img {
     border: 90px;
     border-style: none;
     background-image: url(../images/Circle\ design.svg);
@@ -58,7 +65,7 @@ h3.web-title{
     background-repeat: no-repeat;
 }
 
-.brands{
+.brands {
     display: flex;
     justify-content: space-evenly;
     padding: 50px 150px;
@@ -68,19 +75,20 @@ h3.web-title{
 }
 
 /* products section  */
-.products{
+.products {
     display: grid;
     justify-content: center;
-    color: #111111 ;    
+    color: #111111;
 }
 
-.product-list{
+.product-list {
     gap: 5px 20px;
-    display: grid ;
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    
+
 }
-.product{
+
+.product {
     background-color: white;
     padding: 20px;
     margin: 5px 5px;
@@ -89,7 +97,7 @@ h3.web-title{
     box-shadow: 3px 3px 3px #d3d3d3;
 }
 
-.products-title{
+.products-title {
     margin-top: 70px;
     font-size: 32px;
 }
@@ -99,52 +107,110 @@ h3.web-title{
     font-size: 28px;
 }
 
-.product-price{
+.product-price {
     font-size: 24px;
     font-weight: 400;
 }
 
-.product-info{
+.product-info {
     font-weight: 100;
     color: gray;
 }
 
 /* Last Section before Footer  */
- .join{
+.join {
     display: flex;
     padding: 0 240px;
     gap: 50px;
-    margin-top: 120px ;
+    margin-top: 120px;
     margin-bottom: 120px;
- }
+}
 
- .n-title{
+.n-title {
     font-size: 38px;
     font-weight: 700;
- }
+}
 
- .n-button{
+.n-button {
     border: none;
     font-size: 18px;
     font-weight: 600;
-    background-color:deeppink ;
+    background-color: deeppink;
     color: white;
     padding: 10px 25px;
-    
- }
 
- /* footer  */
- .footer{
+}
+
+/* footer  */
+.footer {
     color: white;
     background-color: #0a0826;
     text-align: center;
     padding: 50px 0;
     width: 100%;
- }
+}
 
- .socials{
+.socials {
     display: flex;
     justify-content: center;
     font-size: 1.5em;
     gap: 10px;
- }
+}
+
+@media only screen and (max-width:576px) {
+    * {
+        text-align: center;
+        width: 100%;
+    }
+
+    .join
+    {
+        flex-direction: column-reverse;
+        padding: 0;
+        margin-top: 0;
+    } 
+
+    .menu {
+        display: block;
+        padding: 0;
+        margin-top: 20px;
+    }
+
+    .nav-menu {
+        display: none;
+    }
+
+    .banner {
+        flex-direction: column-reverse;
+        padding: 0;
+    }
+
+    .brands {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+        padding: 0;
+    }
+
+    .product-list {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .product {
+        padding: 0;
+    }
+    .see{
+        text-align: center;
+        border: 0;
+    }
+    .n-button, .banner-button {
+        border: none;
+        font-size: 18px;
+        font-weight: 600;
+        background-color: deeppink;
+        color: white;
+        padding: 10px;
+        width: 50%;
+    
+    }
+}
